--- a/css/foroblog.css
+++ b/css/foroblog.css
@@ -29,8 +29,63 @@ header {
 #landing-page {
     position: relative;
     height: 100vh;
-    width: 80%;
+    width: 100%;
     color: var(--black);
-    background-color: rgb(230, 230, 230);
+    background-color: var(--primary-color);
+    padding: 1rem 0;
     margin: auto;
+
+    & h1 {
+        font-size: 13rem;
+        text-align: center;
+        margin-top: 2rem;
+        color: var(--white);
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-decoration: #fff;
+        margin-top: 2rem;
+        padding: 1rem;
+        background-color: var(--last-color);
+        overflow: hidden;
+    }
+}
+input {
+    width: 100%;
+    margin-top: 2rem;
+    padding: .5rem;
+    background-color: transparent;
+    color: var(--white);
+    border: 1px dotted #fff;
+}
+
+#categories {
+    height: auto;
+    width: 30%;
+    margin: 1rem;
+    background-color: var(--secondary-color);
+
+    & ul {
+        width: 90%;
+        background-color: var(--last-color);
+        box-shadow: 0 0 .5px #fff;
+        padding: 1rem;
+
+        & h2 {
+            box-shadow: 0 1px 0 #797979;
+        }
+
+        & li {
+            list-style: none;
+            opacity: 0.6;
+            
+            &:nth-child(2) {
+            margin-top: 1rem;
+            }
+
+        }
+
+    }
+
+    @media screen and (max-width: 768px) {
+        width: 65%;
+    }
 }
