--- a/style.css
+++ b/style.css
@@ -465,10 +465,10 @@ input {
                 /* height: 652px;
                 max-height: 652px;
                 max-width: 350px; */
-                height: 362px;
-                max-height: 362px;
-                max-width: 180px;
-                width: 180px;
+                height: 382px;
+                max-height: 382px;
+                max-width: 190px;
+                width: 190px;
                 width: 100%;
                 margin: 1rem auto;
                 border-radius: 5px;
@@ -478,11 +478,12 @@ input {
                 border: 10px solid transparent;
 
                 & h2 {
-                    font-size: 1rem;
+                    font-size: 1.4rem;
                     text-align: end;
                     margin-bottom: 1rem;
                     color: #000;
                     text-shadow: 0 0 10px #fff;
+                    transition: all 0.2s ease-in-out;
                 }
 
                 & h4 {
@@ -522,7 +523,7 @@ input {
                     margin-top: 1rem;
 
                     &:hover {
-                      z-index: 1;
+                        z-index: 1;
                         opacity: 0.5;
                         box-shadow: 0 0 10px #000;
                     }
@@ -534,6 +535,7 @@ input {
                   display: flex;
                   justify-content: space-between;
                   align-items: end;
+                  padding: 0 0 .5rem 0;
 
                   & svg {
                     height: auto;
@@ -543,36 +545,15 @@ input {
 
                     &:hover {
                       transform: scale(1.1);
+                      filter: contrast(0.5);
                     }
                   }
                 }
 
                 &:hover .caratula {
                   z-index: 1;
-                  /* transform: translateY(40px); */
+                  /* transform: translateY(40px);  */
                 }
-
-                &:hover {
-                  border: 10px solid #ffffff;
-                }
-
-                /* &:active {
-                  transform: scale(1.05);
-                } */
-
-                /* &:hover p {
-                  display: inline-block;
-                  transition: all 3s ease-in-out;
-                } */
-
-                &:hover h2 {
-                  opacity: 0.3;
-              }
-            
-            /* &:hover {
-                transform: scale(0.9);
-                box-shadow: 0 0 20px rgb(216, 148, 255 , 0.42); 
-            } */
 
             & .caratula {
                 position: relative;
@@ -893,11 +874,6 @@ header {
   height: 110px;
   width: 100%;
   top: 0;
-  /* z-index: 10;
-  background-color: var(--last-color);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-  background-image: url(/img/B.png); */
-  /* backdrop-filter: blur(2px); */
   background-color: transparent;
 
   & div:first-child {
@@ -906,7 +882,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.158);
+    background-color: rgba(255, 255, 255, 0.027);
     backdrop-filter: blur(10px);
     list-style: none;
     user-select: none;
@@ -927,7 +903,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: .4rem 1rem 1rem 1rem;
+    padding: 1rem 1rem 1rem 2rem;
 
     & #btn-menu {
       z-index: 20;
@@ -1219,7 +1195,7 @@ body.o {
     } 
     .container-star-book {
         position: relative;
-        height: calc(50vh + 150px);
+        height: 100vh;
         width: 100%;
         display: flex;
         place-content: center;
@@ -1388,7 +1364,7 @@ body.o {
 
   & .slider-buy {
     width: 100%;
-    padding: 0 3rem 1rem 0;
+    /* padding: 0 3rem 1rem 0; */
     margin: auto;
     overflow: auto;
   }
@@ -1408,19 +1384,18 @@ p {
   flex-direction: column;
   gap: 2rem;
   list-style: none; /* Elimina las viñetas */
-  padding: 0; /* Elimina el padding */
 }
 
 .libro-lista {
   /* max-height: 60%; */
   position: relative;
-  width: 150%;
+  /* width: 150%; */
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 2rem;
   list-style: none; /* Elimina las viñetas */
-  padding: 0; /* Elimina el padding */
+  padding: 3rem; /* Elimina el padding */
 }
 
 .libro-lista li {
@@ -1445,7 +1420,7 @@ p {
   }
 
   &:first-child {
-    margin-left: 1000px;
+    margin-left: 800px;
   }
 
   & h2 {
@@ -1502,7 +1477,7 @@ p {
 
 #our-team {
   position: relative;
-  height: 60vh;
+  height: auto;
   width: 45%;
   display: flex;
   justify-content: center;
@@ -1535,8 +1510,22 @@ p {
     filter: contrast(0.1) opacity(0.1);
   }
 
-  & div {
+  & .container-about {
+    position: relative;
+    height: auto;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .5rem;
+    flex-wrap: wrap;
+    margin-top: 3rem;
     padding: 1rem;
+
+    & .item-about {
+      height: 300px;
+      width: 300px;
+    }
 
     & svg {
       border: 1px solid var(--secondary-color);
@@ -1829,9 +1818,9 @@ footer {
       font-size: .8rem;
     }
   
-    &:first-child {
+    /* &:first-child {
       margin-left: 1000px;
-    }
+    } */
   
     & h2 {
       font-size: 1.5rem;
