--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,6 @@
     scroll-behavior: smooth;
 }
 
-
 @import url('https://fonts.googleapis.com/css2?family=Borel&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Chango&family=Jura:wght@300..700&family=Shippori+Antique+B1&display=swap');
 
@@ -845,9 +844,9 @@ p {
     & .stories-wrapper {
       display: flex;
       height: 100%;
-      width: 400%;
+      width: 100%;
       transition: transform 0.7s ease-in-out;
-      animation: slide 16s infinite; 
+      /* animation: slide 16s infinite;  */
     }
 
     & .container-stories {
@@ -1353,8 +1352,9 @@ body.o {
   align-items: start;
   flex-direction: column;
   height: 100vh;
-  width: 100%;
+  width: 90%;
   margin: 0 0 4rem 0;
+  margin: auto;
   padding: 6rem 2rem;
   color: var(--white);
   background: url(/img/Aliados/Dark-Gradient-07.png);
@@ -1364,16 +1364,14 @@ body.o {
   overflow: hidden;
 
   & h2 {
-    font-size: 2rem;
+    font-size: 3rem;
     color: var(--white);
     font-weight: bold;
     text-align: start;
-    padding: 0 1rem;
   }
 
   & p:nth-child(2) {
     opacity: .6;
-    padding: 0 1rem 1rem 1rem;
   }
 
   & button {
@@ -1383,14 +1381,10 @@ body.o {
 
   & .slider-buy {
     width: 100%;
-    /* padding: 0 3rem 1rem 0; */
+    padding: 0 3rem 1rem 0;
     margin: auto;
     overflow: auto;
   }
-}
-
-p {
-  margin-bottom: 20px;
 }
 
 .libro-lista-tracker {
@@ -1408,38 +1402,59 @@ p {
 .libro-lista {
   /* max-height: 60%; */
   position: relative;
-  /* width: 150%; */
+  width: 2300px;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 2rem;
   list-style: none; /* Elimina las viñetas */
-  padding: 3rem; /* Elimina el padding */
-}
+  
+  & li {
+    position: relative;
+    height: 350px;
+    width: 450px;
+    min-width: 450px;
+    padding: .6rem;
+    /* padding: 1rem; */
+    border: 1px solid #cccccc2f; /* Borde alrededor de cada empresa */
+    border-radius: 15px; /* Bordes redondeados */
+    transition: transform 0.2s; /* Animación al pasar el ratón */
+    opacity: 0.5;
+    background: linear-gradient(133deg, rgba(41,41,41,0.9332107843137255) 0%, rgba(20,20,20,0.9836309523809523) 64%);
+    background-size: cover;
+    background-blend-mode: screen;
+    background-position: center;
+    background-repeat: no-repeat;
+    backdrop-filter: blur(10px); 
 
-.libro-lista li {
-  position: relative;
-  height: 350px;
-  width: 450px;
-  min-width: 450px;
-  /* padding: 1rem; */
-  border: 1px solid #cccccc2f; /* Borde alrededor de cada empresa */
-  border-radius: 15px; /* Bordes redondeados */
-  transition: transform 0.2s; /* Animación al pasar el ratón */
-  opacity: 0.5;
-  background: linear-gradient(133deg, rgba(41,41,41,0.9332107843137255) 0%, rgba(20,20,20,0.9836309523809523) 64%);
-  background-size: cover;
-  background-blend-mode: screen;
-  background-position: center;
-  background-repeat: no-repeat;
-  backdrop-filter: blur(10px); 
+    & .to-buy {
+      z-index: 1;
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      backdrop-filter: blur(10px);
+      opacity: 0;
+
+      & h2 {
+        font-size: 3rem;
+        text-align: center;
+      }
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+}
 
   & p {
     opacity: 0.5;
-  }
-
-  &:first-child {
-    margin-left: 800px;
+    padding: 0 1rem;
   }
 
   & h2 {
@@ -1448,76 +1463,47 @@ p {
   }
 
   & img {
-    position: absolute;
-    bottom: 40px;
-    right: 25px;
+    position: relative;
     height: auto;
-    width: 225px;
-    filter: opacity(.2) contrast(.1) brightness(.8);
+    width: 300px;
+    margin-bottom: 1.5rem;
+    padding: 2rem;
+    /* filter: contrast(.1) brightness(.8); */
     user-select: none;
     -webkit-user-drag: none;
 
   }
 }
 
-.libro-lista li:hover {
-  opacity: .8;
-}
+/* .libro-lista li:hover {
+  opacity: .6;
+} */
 
-.libro-lista li:hover img {
+/* .libro-lista li:hover img {
   z-index: -1;
   filter: contrast(.7);
-  }
+  } */
 
 .libro-lista a {
   font-size: 1rem;
   text-decoration: none; /* Elimina el subrayado de los enlaces */
   color: var(--white);
   font-weight: bold;
-  padding: .2rem;
-}
-
-.comprar-btn {
-  margin-top: 10px; /* Espacio encima del botón */
-  background-color: #d894ff; /* Color primario 2 para el botón */
-  color: var(--black); /* Texto blanco */
-  border: none; /* Sin borde */
-  border-radius: 5px; /* Bordes redondeados */
-  padding: 10px 15px; /* Relleno dentro del botón */
-  font-size: 14px; /* Tamaño de fuente del botón */
-  transition: background-color 0.3s; /* Transición de color de fondo */
-}
-
-
-.comprar-btn a {
-  color: var(--black); /* Texto blanco */
-  text-decoration: none; /* Sin subrayado */
 }
 
 #our-team {
   position: relative;
   height: auto;
-  width: 45%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  /* background-color: var(--last-color); */
-  /* background-image: 
-  linear-gradient(-30deg, rgba(0, 0, 0, 0.151) 0%, rgba(12, 12, 12, 0.548) 92%);
-  background-blend-mode: soft-light;
-  background-size: auto;
-  background-position: center;
-  backdrop-filter:blur(20px);
-  box-shadow: 0 0 20px #0000003f; 
-  border: 1px solid #ffffff18;*/
+  background-color: var(--last-color);
   border-radius: 15px;
   text-align: center;
   text-shadow: 0 0 7px #000000;
   margin: auto;
-  margin-bottom: 2rem;
-  padding: 2rem;
-  overflow-y: hidden;
+  padding: 3rem 2rem 0 2rem;
 
   & img {
     position: absolute;
@@ -1536,27 +1522,35 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: .5rem;
+    gap: 1rem;
     flex-wrap: wrap;
     margin-top: 3rem;
     padding: 1rem;
 
     & .item-about {
-      height: 300px;
-      width: 300px;
+      height: 280px;
+      width: 280px;
+      padding: 1rem;
+      border-radius: 5px;
+
+      &:hover {
+        border: 1px solid #333;
+      }
+
+      &:hover svg {
+        border: 1px solid var(--secondary-color);
+        border-radius: 50%;
+        transform: scale(1);
+        color: var(--white);
+      }
     }
 
     & svg {
-      border: 1px solid var(--secondary-color);
-      border-radius: 50%;
-      padding: 1rem;
+      color: var(--secondary-color);
+      padding: 2rem 1rem;
       transition: all 0.3s;
       backdrop-filter: blur(5px);
       transform: scale(.8);
-      
-      &:hover {
-        transform: scale(1);
-      }
     }
   }
 
@@ -1564,6 +1558,12 @@ p {
     font-size: 4rem;
     color: var(--white);
     text-align: center;
+    transform: rotate(-2deg);
+  }
+
+  & h4 {
+    padding: .5rem;
+    color: var(--secondary-color);
   }
 
   p {
@@ -1673,6 +1673,147 @@ footer {
     text-decoration: none;
 }
 
+
+
+
+
+
+
+
+
+.container-newsletter {
+  z-index: 100;
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  top: 0;
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+}
+
+.subscription-modal {
+  position: fixed;
+  z-index: 100;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  max-width: 600px;
+  width: 100%;
+  background-color: #fff;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+
+  & label {
+    color: var(--black);
+  }
+}
+
+/* Imagen en el contenedor */
+.subscription-image {
+  max-width: 200px;
+  flex: 1;
+  background-image: url('https://mejorconsalud.as.com/wp-content/uploads/2021/04/escalada-roca.jpg');
+  background-size: cover;
+  background-position: center;
+  height: auto;
+}
+
+/* Contenido del formulario */
+.subscription-content {
+  flex: 1;
+  padding: 40px;
+}
+
+.subscription-content h2 {
+  font-size: 24px;
+  font-weight: 900;
+  margin: 0 0 10px;
+  color: var(--black);
+}
+
+.subscription-content p {
+  font-size: 14px;
+  color: #666;
+  margin: 0 0 20px;
+}
+
+/* Estilos de los inputs y el botón */
+.subscription-content label {
+  font-size: 14px;
+  font-weight: bold;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.subscription-content input[type="text"],
+.subscription-content input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+}
+
+.checkbox-container-subscription {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  margin-bottom: 20px;
+  color: var(--black);
+
+  & a {
+    color: var(--secondary-color);
+  }
+}
+
+.checkbox-container-subscription input[type="checkbox"] {
+  width: fit-content;
+  margin: 0 30px 0 10px;
+}
+
+.subscription-button {
+  width: 100%;
+  padding: 10px;
+  background-color: #000;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.subscription-button:hover {
+  background-color: #333;
+}
+
+/* Cerrar formulario */
+.btn-close-nestletter {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  color: var(--black);
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
 .footer-subscription {
   flex: 1;
   max-width: 300px; /* Limitar ancho */
@@ -1709,10 +1850,10 @@ footer {
 
 .footer-subscription button {
   margin: auto;
-  padding: 17px 20px;
+  padding: 10px;
   border: none;
   border-radius: 5px;
-  background-color: transparent;
+  background-color: var(--secondary-color);
   color: var(--white);
   cursor: pointer;
   transition: background-color 0.3s;
@@ -1815,48 +1956,36 @@ footer {
     }
   }
 
-  .libro-lista li {
-    position: relative;
-    height: 300px;
-    width: 80px;
-    min-width: 220px;
-    padding: 1rem;
-    border: 1px solid #cccccc2f; /* Borde alrededor de cada empresa */
-    border-radius: 5px; /* Bordes redondeados */
-    transition: transform 0.2s; /* Animación al pasar el ratón */
-    opacity: 0.5;
-    background: linear-gradient(133deg, rgba(41,41,41,0.9332107843137255) 0%, rgba(20,20,20,0.9836309523809523) 64%);
-    background-size: cover;
-    background-blend-mode: screen;
-    background-position: center;
-    background-repeat: no-repeat;
-    backdrop-filter: blur(10px);
-  
-    & p {
-      opacity: 0.5;
-      font-size: .8rem;
+  .libro-lista {
+    width: 400%;
+
+    & li {
+      position: relative;
+      height: 300px;
+      width: 220px;
+      min-width: 220px;
+
+    
+      & p {
+        opacity: 0.5;
+        font-size: .8rem;
+      }
+    
+      & h2 {
+        font-size: 2rem !important;
+      }
+    
+      & img {
+        position: absolute;
+        bottom: 20px;
+        width: 205px;
+        filter: opacity(.2) contrast(.1) brightness(.8);
+        user-select: none;
+        -webkit-user-drag: none;
+    
+      }
     }
-  
-    /* &:first-child {
-      margin-left: 1000px;
-    } */
-  
-    & h2 {
-      font-size: 1.5rem;
-    }
-  
-    & img {
-      position: absolute;
-      bottom: 30px;
-      right: 35px;
-      height: auto;
-      width: 125px;
-      filter: opacity(.2) contrast(.1) brightness(.8);
-      user-select: none;
-      -webkit-user-drag: none;
-  
-    }
-  }
+}
 
   #our-team {
     height: auto;
