--- a/public/style.css
+++ b/public/style.css
@@ -1577,14 +1577,7 @@ body.o {
       border-radius: 5px;
 
       &:hover {
-        border: 1px solid #333;
-      }
-
-      &:hover svg {
-        border: 1px solid var(--secondary-color);
-        border-radius: 50%;
-        transform: scale(1);
-        color: var(--white);
+        box-shadow: 0 0 3px #505050;
       }
     }
 
@@ -1593,7 +1586,10 @@ body.o {
       padding: 2rem 1rem;
       transition: all 0.3s;
       backdrop-filter: blur(5px);
-      transform: scale(.8);
+      border: 1px solid var(--secondary-color);
+      border-radius: 50%;
+      transform: scale(1);
+      color: var(--white);
     }
   }
 
