--- a/public/style.css
+++ b/public/style.css
@@ -24,9 +24,12 @@ button {
 }
 
 body {
+  position: relative;
     height: auto;
     width: auto;
-    max-width: 2600px;
+    /* max-width: 2600px;  */
+    display: flex;
+    flex-direction: column;
     font-family: "Jura", sans-serif;
     /* background-color: #d894ff; */
     color: #fff;
@@ -393,60 +396,63 @@ input {
 
 
 /* Nav bar vertical */
+/* Nav bar vertical */
 .social-media {
-    width: 50px; /* Ancho del apartado para ajustar al tamaño del ícono */
-    position: sticky;
-    top: 50px; /* Distancia desde la parte superior de la pantalla */
-    left: 0; /* Pegado a la derecha */
-    background: #272727a1;
-    backdrop-filter: blur(60px);
-    padding: 10px 10px 20px 10px; /* Espaciado interno */
-    border-radius: 8px; /* Bordes redondeados */
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* Sombra más prominente */
-    color: white;
-    text-align: center;
-    z-index: 50; /* Asegura que esté encima de otros elementos */
-    transform: rotate(-90deg) translate(0 , -55%);
-    transition: all 0.3s;
+  z-index: 20;
+  width: 50px; /* Ancho del apartado para ajustar al tamaño del ícono */
+  position: sticky;
+  top: 0; /* Distancia desde la parte superior de la pantalla */
+  left: 0; /* Pegado a la derecha */
+  height: fit-content;
+  width: fit-content;
+  margin-top: -12.35rem;
+  background: #272727a1;
+  backdrop-filter: blur(60px);
+  padding: 10px 10px 20px 10px; /* Espaciado interno */
+  border-radius: 8px; /* Bordes redondeados */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* Sombra más prominente */
+  color: white;
+  text-align: center;
+  transform: rotate(-90deg) translate(0 , -55%);
+  transition: all 0.3s;
+}
 
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      height: 10px;
-      width: 100%;
-      margin: -.5rem 0;
-      border: 15px solid var(--white);
-      border-bottom-right-radius: 5px;
-      border-bottom-left-radius: 5px;  
-    }
+.social-media::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 10px;
+  width: 100%;
+  margin: -.5rem 0;
+  border: 15px solid var(--white);
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
 
-    &:hover {
-      display: block;
-      opacity: 0.8;
-      transform: rotate(0deg) translate(0 );
-    }
-
+.social-media:hover {
+  opacity: 0.8;
+  transform: rotate(0deg) translate(0);
 }
 
 .social-media li {
   list-style: none;
   margin: 10px 0; /* Espacio entre los elementos de la lista */
   transition: all 0.1s;
+}
 
-  &:last-child {
-    opacity: 0.5;
+.social-media li:hover {
+  transform: scale(1.2); /* Aumenta el tamaño al pasar el mouse */
+  opacity: 1;
+}
 
-    &:hover {
-      opacity: 0.6;
-      transform: scale(1);
-    }
-  }
+.social-media li:last-child {
+  opacity: 0.5;
+}
 
-  :hover {
-    opacity: 1;
-  }
+.social-media li:last-child:hover {
+  opacity: 0.6;
+  transform: scale(1);
 }
 
 .social-media a {
@@ -454,11 +460,6 @@ input {
   text-decoration: none; /* Sin subrayado */
   font-size: 24px; /* Tamaño del ícono */
   transition: transform 0.3s; /* Efecto de transición al pasar el mouse */
-}
-
-.social-media li:hover {
-  transform: scale(1.2); /* Aumenta el tamaño al pasar el mouse */
-  opacity: 1;
 }
 
 
@@ -1169,224 +1170,200 @@ body.o {
 
 #starbooks {
     position: relative;
-    height: auto;
-    width: 90%;
+    height: 100vh;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    margin: -8rem auto;
-    /* background-image:
-    radial-gradient(88.42% 78.42% at -9.41% 51.58%, rgba(253, 253, 253, 0.082) 0%, rgba(7, 7, 7, 0.76) 100%);
-    background-blend-mode: difference;
-    background-repeat: no-repeat;
-    background-size: cover; */
+    margin: auto;
+    overflow: hidden;
 
     & h2 {
-      z-index: 1;
-      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-      color: var(--white);
-      text-shadow: 0 0 10px #000000;
-      font-size: 5rem;
+      font-size: 3rem;
       font-weight: bold;
-      text-align: center;
-      padding: 3rem 0 0.5rem 0;
-
-        &::after {
-          content: "";
-          z-index: -1;
-          position: absolute;
-          top: -15%;
-          right: 25%;
-          width: 400px;
-          height: 400px;
-          transform: translate(0, -70%);
-          background-image: url(/img/star.png);
-          background-size: cover;
-          background-repeat: no-repeat;
-          background-position: center;
-          filter:drop-shadow( 5px 45px 5px #ffffff15) contrast(0.3);
-          transform: rotate(65.5deg);
-        }
+      color: var(--white);
+      text-transform: uppercase;
     }
 
-    & p {
-      opacity: .6;
-    }
-
-    & .tags {
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      gap: .5rem;
-      padding: 0 2rem;
-      transition: all .5s ease;
-
-    & p {
-      font-size: 1rem;
-    }
-
-    &::after {
-      content: "Top Categories";
-      position: absolute;
-      top: 0;
-      left: 0;
-      color: rgb(255, 45, 45);
-      text-shadow: 0 0 40px #000;
-      font-size: .6rem;
-      padding: .5rem;
+    & video {
+      background-color: var(--black);
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      filter: contrast(.8) brightness(.2);
     }
   }
 
-    & p {
-      font-size: 1.5rem;
-      font-weight: 500;
-      text-align: center;
-      text-shadow: 0 0 5px #000000a2;
-      margin-top: 2rem;
-    }
 
-    & .item-starbook {
-        height: 100%;
-        width: 90%;
-        margin-right: 7rem;
-        transform: scale(.8);
-    } 
-    .container-star-book {
-        position: relative;
-        height: 100vh;
-        width: 100%;
-        display: flex;
-        place-content: center;
-        overflow: auto;
-    }
-    
-    .wrapper {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        flex-wrap: wrap;
-        
-        /* top: 10%; */
-        /* left: 40%; */
-        height: 400px;
-        width: 300px;
-        perspective: 700px;
-      }
-      
-      .container {
-        position: absolute;
-        top: 0%;
-        width: 100%;
-        height: 100%;
-        transition: .5s all ease;
-        transform: rotateX(60deg) scale(0.6);
-        perspective: 900px;
-        transition: .5s all ease;
-        z-index: 10;
-        transform: scale(1) translateY(50px);
-      }
-      
-      #c0 {
-        position: absolute;
-        top: 0%;
-        width: 100%;
-        height: 100%;
-        z-index: 0;
-      }
-      
-      #c1 {
-        left: 100%;
-        z-index: 0;
-      }
-      
-      #c2 {
-        left: -100%;
-        z-index: 0;
-      }
-      
-      /* .container:hover {
+.container-star-books {
+  position: relative;
+  width: 100%;
+  height: 100vh; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 
-      } */
-      
-      .image {
-        position: absolute;
-        top: 0%;
-        left: 0%;
-        width: 100%;
-        height: 100%;
-      }
-      
-      span {
-        position: absolute;
-        top: 0%;
-        left: 55%;
-        border-radius: 100%;
-        background-color: #fff;
-        z-index: 10;
-      }
-      
-
-
-      li:nth-child(1) {
-        left: 15%;
-        animation: simple1 1s linear infinite;
-      }
-      
-      li:nth-child(2) {
-        right: 15%;
-        animation: simple 1s linear infinite;
-      }
-      
-      
-      @keyframes entry {
-        0% {
-          top: -20%;
-          opacity: 0.1;
-        }
-        100% {
-          top: 0%;
-        }
-      }
-}
-.info {
+  & .descrip-starbooks {
     position: absolute;
-    top: 10%;
-  
-        & h3 {
-            font-size: 1rem;
-            text-align: end;
-            text-shadow: 0px 0px 10px #eee;
-            color: #eee;
-            letter-spacing: 2px;
-            }
+    height: 150px;
+    top: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    width: 100%;
 
-        & p {
-            font-size: .7rem;
-            color: #fff;
-            padding: 0px 20px 20px 20px;
-            line-height: 150%;
-            text-align: center;
-            letter-spacing: 1px;
-            }
+    & h2 {
+      font-size: 2.5rem;
+      color: #fff;
+      margin-bottom: 1rem;
     }
 
-@media screen and (max-width: 1000px) {
-    .wrapper {
-        transform: translateX(280px);
+    & p {
+      font-size: 1.2rem;
+      color: #fff;
     }
+  }
 
-    .info {
+  & .acronimo {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    right: 50%;
+    transform: translateX(50%);
+    color: rgba(255, 255, 255, 0.514);
+    text-align: center;
+    padding: 0 .2rem;
 
-        & p {
-            font-size: .3rem;
-        }
-    } 
+    & span {
+      color: var(--white);
+      font-size: 3rem;
+    }
+  }
 }
+
+
+
+.circle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #8926b5;
+  cursor: pointer;
+  position: absolute;
+  transition: transform 2s ease-in-out;
+  z-index: 10;
+
+  &::after {
+    content: var(--circle-text,"Descubrir!");
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 1.3rem;
+
+  }
+}
+
+.circle.expand {
+  transform: scale(25) rotate(720deg);
+}
+
+.content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  opacity: 0;
+  color: var(--white);
+  text-align: center;
+  transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+
+  & p:first-child {
+    padding: 1rem;
+  }
+
+  & span {
+    font-size: 3rem;
+  }
+}
+
+.content.visible {
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.container-star-book {
+  position: relative;
+  max-width: 450px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.image {
+  display: none;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.image.active {
+  display: block;
+  opacity: 1;
+}
+
+.description {
+  margin-top: 20px;
+  color: var(--white);
+  font-size: 14px;
+  text-align: center;
+  padding: 10px;
+  background-color: #333333;
+  border-radius: 5px;
+  display: none;
+}
+
+.image.active .description {
+  display: block;
+}
+
+.nav-buttons {
+  position: fixed;
+  top: 50%;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  transform: translateY(-50%);
+  z-index: 15;
+}
+
+.nav-button {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  font-size: 20px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.nav-button:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+
+
+
+
+
+
+
 
 #buy-books {
   position: relative;
